# openai-agents-fistasolutions

./: .gitignore
basicopenaiagent/: .gitignore  README.md  main.py  pyproject.toml
basicopenaiagent/src/basicopenaiagent/: __init__.py
chainlitdemo/: helloworld.py  pyproject.toml
chainlitdemo/src/chainlitdemo/: __init__.py
fistaclass/: pyproject.toml
fistaclass/src/fistaclass/: __init__.py
hello-world-agents/: README.md  main.py  pyproject.toml
helloworld/: .gitignore  pyproject.toml
helloworld/src/agents/: 03_basicconfig.py  06_basichandsoff.py  08_basiccloning.py  09_running.py  10_streamingrawresponse.py  11_runitemandagentsevents.py  13_functiontools.py  14_customfunctiontools.py  15_agentsastools.py  16_basichandsoff.py  17_customizinghandsoff.py  18_handsoffinputs.py  19_inputfilters.py  20_recommendedprompts.py  21_highleveltraces.py  22_localcontext.py  23_guardrails.py  24_outputguardrails.py  25_models.py  26_basicvoiceagent.py  27_basicvoiceagent.py  README.md  basiccontext.py  basicdynamicinstructions.py  basicoutput.py
helloworld/src/geminiagents/: 02_detailagent.py  03_basicconfig.py  04_basiccontext.py  05_basicoutput.py  06_basichandsoff.py  07_basicdynamicinstructions.py  08_basiccloning.py  09_running.py  10_streamingrawresponse.py  11_runitemandagentsevents.py  12_hostedtools.py  13_functiontools.py  14_customfunctiontools.py  15_agentsastools.py  16_basichandsoff.py  17_customizinghandsoff.py  18_handsoffinputs.py  19_inputfilters.py  20_recommendedprompts.py  21_highleveltraces.py  22_localcontext.py  23_guardrails.py  24_outputguardrails.py  25_models.py
helloworld/src/helloworld/: __init__.py
openaiagentssdk/: README.md  pyproject.toml
openaiagentssdk/agentswithopenai/: 02_detailagent.py  03_basicconfig.py  05_basicoutput.py  06_basichandsoff.py  07_basicdynamicinstructions.py  08_basiccloning.py  09_running.py  10_streamingrawresponse.py  11_runitemandagentsevents.py  13_functiontools.py  14_customfunctiontools.py  15_agentsastools.py  17_customizinghandsoff.py  18_handsoffinputs.py  19_inputfilters.py  20_recommendedprompts.py  21_highleveltraces.py  22_localcontext.py  23_guardrails.py  24_outputguardrails.py  25_models.py  26_basicvoiceagent.py  27_basicvoiceagent.py  README.md
ramadanclass/: pyproject.toml
ramadanclass/src/ramadanclass/: __init__.py
tutor-agents/: README.md  main.py  pyproject.toml
(+41 files in other folders)
